--- a/.~index.ipynb
+++ b/.~index.ipynb
@@ -604,8 +604,10 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
-   "metadata": {},
+   "execution_count": 13,
+   "metadata": {
+    "collapsed": true
+   },
    "outputs": [],
    "source": [
     "name = 42"
